# image-edge

EdgeDetectionViewer/: .gitignore  README.md  build.gradle  settings.gradle
EdgeDetectionViewer/app/: build.gradle
EdgeDetectionViewer/app/src/main/: AndroidManifest.xml
EdgeDetectionViewer/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  native-lib.cpp  opencv_processor.cpp  opencv_processor.h
EdgeDetectionViewer/app/src/main/java/com/assessment/edgeviewer/: MainActivity.kt  NativeProcessor.kt
EdgeDetectionViewer/app/src/main/java/com/assessment/edgeviewer/camera/: CameraManager.kt  FrameProcessor.kt
EdgeDetectionViewer/app/src/main/java/com/assessment/edgeviewer/gl/: GLRenderer.kt  ShaderProgram.kt  TextureRenderer.kt
EdgeDetectionViewer/app/src/main/java/com/assessment/edgeviewer/utils/: FPSCounter.kt  PermissionHelper.kt
EdgeDetectionViewer/app/src/main/res/layout/: activity_main.xml
EdgeDetectionViewer/app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
EdgeDetectionViewer/app/src/main/res/values/: strings.xml
EdgeDetectionViewer/web/: package.json  tsconfig.json
EdgeDetectionViewer/web/src/: frameViewer.ts  index.html  main.ts  styles.css
